--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     
     <header class="page-header">
       <div class="container">
-      Контакты в шапке
+        <a class='header-email' href="mailto:WeLoveKeki@yandex.ru">WeLoveKeki@yandex.ru</a>
+        <a class="header-phone" href="tel:+79117590136">+7 911 759 01 36</a>
      </div>
     </header>
 
@@ -26,6 +27,9 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="600" height="836" alt="Фотография Неопознанного Енота">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Скоро я потеряю работу и хочу научиться писать крутые сайты, чтобы зарабатывать на этом.</p>
       <h3>Чем могу быть полезен</h3>
@@ -36,8 +40,11 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
+      <a class="button" href="source/project1/index.html">Открыть страницу</a>
       <p>Мой первый сайт.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -47,7 +54,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      Inst: Mr. Tribbl
+        <a class="footer-email" href="mailto:WeLoveKeki@yandex.ru">WeLoveKeki@yandex.ru</a>
+        <a class="footer-phone" href="tel:+79117590136">+7 911 759 01 36</a>
       </div>
     </footer>
   </body>
